--- a/.speakeasy/gen.yaml
+++ b/.speakeasy/gen.yaml
@@ -31,6 +31,7 @@ typescript:
       shared: models/components
       webhooks: models/webhooks
   inputModelSuffix: input
+  installationURL: https://github.com/log10-io/log10ts
   maxMethodParams: 4
   methodArguments: require-security-and-request
   outputModelSuffix: output
