--- a/.github/workflows/sdk_generation.yaml
+++ b/.github/workflows/sdk_generation.yaml
@@ -22,4 +22,5 @@ jobs:
       speakeasy_version: latest
     secrets:
       github_access_token: ${{ secrets.GITHUB_TOKEN }}
+      npm_tqf1isst3v16bx1uz0ndehyobpnbwx0lqjpr: ${{ secrets.NPM_TQF1ISST3V16BX1UZ0NDEHYOBPNBWX0LQJPR }}
       speakeasy_api_key: ${{ secrets.SPEAKEASY_API_KEY }}
