--- a/.speakeasy/workflow.yaml
+++ b/.speakeasy/workflow.yaml
@@ -12,4 +12,4 @@ targets:
         source: default
         publish:
             npm:
-                token: $npmsecret
+                token: $npm_token
