--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "checkJs": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
