--- a/.speakeasy/gen.yaml
+++ b/.speakeasy/gen.yaml
@@ -14,7 +14,9 @@ generation:
 typescript:
   version: 0.3.10
   additionalDependencies:
-    dependencies: {}
+    dependencies:
+      "openai": "^4.69.0"
+      "axios": "^1.7.7"
     devDependencies: {}
     peerDependencies: {}
   additionalPackageJSON: {}
