--- a/.speakeasy/gen.yaml
+++ b/.speakeasy/gen.yaml
@@ -18,6 +18,8 @@ typescript:
     dependencies:
       axios: ^1.7.7
       openai: ^4.69.0
+      "@aws-sdk/client-bedrock-runtime": "^3.709.0"
+      "@aws-sdk/credential-providers": "^3.687.0"
     devDependencies: {}
     peerDependencies: {}
   additionalPackageJSON: {}
